--- a/employee_area/employee_styles/employee_dashboard.css
+++ b/employee_area/employee_styles/employee_dashboard.css
@@ -66,7 +66,11 @@ body {
 
 .employee-greeting {
   margin-left: 270px;
-  padding: 20px;
+  padding: 10px;
+}
+
+.employee-greeting-modified {
+  margin-left: 270px;
 }
 
 .employee-details-container {
